fixed about me on mobile

--- a/css/about.css
+++ b/css/about.css
@@ -282,7 +282,7 @@
 	text-shadow: none;
 }
 
-.paragraph h3::selection {
+.paragraph h2::selection {
 	background: var(--dracula-pink);
 	color: var(--dracula-foreground);
 	text-shadow: none;
