--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1176,7 +1176,7 @@
 		height: 75vh;
 	}
 
-	.paragraph h3 {
+	.paragraph h2 {
 		font-size: 1.5rem;
 	}
 }
@@ -1217,7 +1217,7 @@
 		padding-top: 9rem;
 	}
 
-	.paragraph h3 {
+	.paragraph h2 {
 		text-shadow: 0 4px 3px rgba(0, 0, 0, 0.4), 0 8px 13px rgba(0, 0, 0, 0.1),
 			0 18px 23px rgba(0, 0, 0, 0.1);
 	}
